# vulkan-voxel-game

./: .gitignore
client/: .gitignore  Cargo.toml
client/assets/shaders/: compressor  debug_lines.vert  fullscreen.vert  fxaa.frag  immediate.frag  immediate.vert  luminance.frag  post_compute.glsl  sky.frag  text.frag  text.vert  triangle.frag  triangle.vert
client/src/: assets.rs  camera.rs  components.rs  game.rs  main.rs  player.rs  resources.rs  text_box.rs
client/src/chat/: commands.rs  mod.rs
client/src/entities/: mod.rs
client/src/game/: client.rs  mod.rs  player.rs
client/src/game/states/: connection_lost.rs  game.rs  mod.rs  username_query.rs
client/src/game/states/game/: input_recorder.rs
client/src/input/: history.rs  keyboard.rs  mod.rs  mouse.rs  settings.rs
client/src/networking/: connection.rs  login.rs  mod.rs  network_thread.rs
client/src/renderer/: descriptor_sets.rs  framebuffers.rs  mod.rs  pipelines.rs  render_passes.rs  renderer.rs  renderer_old.rs  text_renderer.rs  ui_renderer.rs  wrappers.rs
client/src/renderer/passes/: fxaa_pass.rs  luminance_pass.rs  mod.rs  sky_pass.rs  terrain_pass.rs  ui_pass.rs
client/src/states/: connection_lost.rs  game.rs  mod.rs  username_query.rs
client/src/states/game/: camera.rs  input_recorder.rs
client/src/world/: block.rs  chunk.rs  chunk_generator.rs  chunk_group.rs  chunk_renderer.rs  dimension.rs  mod.rs
server/: Cargo.toml
server/src/: components.rs  game_builder.rs  main.rs  net.rs  resources.rs  server.rs
server/src/networking/: channels.rs  client_connection.rs  login.rs  mod.rs  network_thread.rs
shared/: Cargo.toml
shared/src/: bits_and_bytes.rs  byte_channel.rs  jitter_prevention.rs  lib.rs  noise.rs  protocol.rs
shared/src/protocol/: client_to_server.rs  mod.rs  server_to_client.rs
tools/compressor/: Cargo.toml
tools/compressor/src/: main.rs
tools/texpack/: Cargo.toml  blocks.xml
tools/texpack/src/: main.rs
vkcore/: Cargo.toml
vkcore/src/: allocator.rs  context.rs  debug.rs  device.rs  lib.rs  pipeline.rs  render_pass.rs  swapchain.rs  uploader.rs
vkcore/src/init/: device.rs  frame_data.rs  instance.rs  mod.rs  swapchain.rs
