[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
erupt = "0.22.0"
winit = { version = "0.27.2", default-features = false, features = ["x11"] }
smallvec = "1.9.0"
anyhow = "1.0.61"
glam = { version = "0.21.3", features = ["bytemuck"] }
lz4 = "1.23.3"
rand = "0.8.5"
once_cell = "1.13.0"
arboard = { version = "2.1.1", default-features = false }
flexstr = "0.9.2"
mimalloc = { version = "0.1.29", default-features = false }
hecs = "0.9.0"
bevy_utils = "0.8.0"
bytemuck = { version = "1.11.0", features = ["derive"] }
tokio = { version = "1.20.1", default-features = false, features = ["rt", "macros", "sync"] }
rustls = { version = "0.20.6", default-features = false, features = ["dangerous_configuration", "quic"] }
quinn = { git = "https://github.com/quinn-rs/quinn" }
rcgen = "0.9.3"
tracing-tracy = "0.10.0"
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
thunderdome = "0.5.1"
rayon = "1.5.3"
bytes = "*" # let quinn pick the version

shared = { path = "../shared" }
vkcore = { path = "../vkcore" }

#png = "0.17.5"
#freetype-rs = "0.29.0"
#crossbeam-channel = "0.5.2"
