[package]
name = "vkcore"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.5.0"

erupt = "0.22.0"
winit = { version = "0.27.2", default-features = false, features = ["x11"] }
smallvec = "1.9.0"
anyhow = "1.0.61"
bitflags = "1.3.2"
gpu-alloc-erupt = "*"
gpu-alloc = "*"
